# lib_mrsid

./: CMakeLists.txt
cmake/: util.cmake
